gradient boosted trees in forest fires dataset

--- a/forest_fires.ipynb
+++ b/forest_fires.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/annanau/anaconda3/lib/python3.7/site-packages/sklearn/ensemble/weight_boosting.py:29: DeprecationWarning: numpy.core.umath_tests is an internal NumPy module and should not be imported. It will be removed in a future NumPy release.\n",
+      "  from numpy.core.umath_tests import inner1d\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -22,6 +31,7 @@
     "from time import strptime\n",
     "from sklearn.linear_model import LinearRegression\n",
     "from sklearn.metrics import mean_squared_error\n",
+    "from sklearn.ensemble import GradientBoostingRegressor\n",
     "\n",
     "#%run './base.ipynb'"
    ]
@@ -36,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 14,
    "metadata": {
     "scrolled": true
    },
@@ -78,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -390,7 +400,7 @@
        "      <th>RH</th>\n",
        "      <th>wind</th>\n",
        "      <th>rain</th>\n",
-       "      <th>area</th>\n",
+       "      <th>log(1+area)</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -547,18 +557,18 @@
        "75%    713.900000   10.800000   22.800000   53.000000    4.900000    0.000000   \n",
        "max    860.600000   56.100000   33.300000  100.000000    9.400000    6.400000   \n",
        "\n",
-       "             area  \n",
-       "count  517.000000  \n",
-       "mean     1.111026  \n",
-       "std      1.398436  \n",
-       "min      0.000000  \n",
-       "25%      0.000000  \n",
-       "50%      0.418710  \n",
-       "75%      2.024193  \n",
-       "max      6.995620  "
+       "       log(1+area)  \n",
+       "count   517.000000  \n",
+       "mean      1.111026  \n",
+       "std       1.398436  \n",
+       "min       0.000000  \n",
+       "25%       0.000000  \n",
+       "50%       0.418710  \n",
+       "75%       2.024193  \n",
+       "max       6.995620  "
       ]
      },
-     "execution_count": 102,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -583,6 +593,7 @@
     "# Distribution of repsonse variable is highly right-skewed so we could apply log transformation\n",
     "data2['area'] = data2['area'].apply(lambda x: np.log(x+1)) # np.log performs natural log\n",
     "data2['area'].hist(bins = 40, figsize=(20,10))\n",
+    "data2.rename(index = str, columns = {\"area\": \"log(1+area)\"}, inplace = True)\n",
     "data2.describe()"
    ]
   },
@@ -911,7 +922,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -926,7 +937,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -938,13 +949,33 @@
     "    \n",
     "    print(f'R^2 value for model: {reg.score(X_train, y_train)}')\n",
     "\n",
-    "    return reg"
+    "    return reg\n",
+    "\n",
+    "# Gradient Boosted Trees\n",
+    "def run_boosted_tree(X_train, y_train, param_fix, cv, param_grid):\n",
+    "    print(\"GridSearch initializing...\")\n",
+    "    clf = GridSearchCV(estimator = GradientBoostingRegressor(**param_fix), cv = cv, param_grid = param_grid, \n",
+    "                       scoring = ['r2', 'neg_mean_absolute_error', 'neg_mean_squared_error'], \n",
+    "                       refit = 'neg_mean_squared_error')\n",
+    "    \n",
+    "    print(\"GradientBoostedRegressor model in training...\")\n",
+    "    t0 = time.time()\n",
+    "    clf.fit(X_train, y_train)\n",
+    "    clf_fit = time.time() - t0\n",
+    "    print(\"GradientBoostedRegressor model selected and fitted in %.3f s\\n\" % clf_fit)\n",
+    "    \n",
+    "    best_params = clf.best_params_\n",
+    "    print(\"Best parameters selected by GridSearch: %s\" % best_params)\n",
+    "    \n",
+    "    return clf"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
-   "metadata": {},
+   "execution_count": 25,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
@@ -960,7 +991,7 @@
      "output_type": "stream",
      "text": [
       "R^2 value for model: 0.07451358850565404\n",
-      "MSE: 2.050932949339859\n",
+      "MSE: 2.050932949339858\n",
       "R^2 Score: -0.15565990363413595\n"
      ]
     },
@@ -986,22 +1017,24 @@
    "source": [
     "### Linear Regression \n",
     "display('### Linear Regression ###')\n",
+    "# Fit model\n",
     "reg = linear_reg(X_train, y_train)\n",
-    "\n",
-    "pred = reg.predict(X_test)\n",
+    "# Predict test, compute metrics\n",
+    "pred1 = reg.predict(X_test)\n",
     "r2_score = reg.score(X_test, y_test)\n",
-    "mse = mean_squared_error(y_test, pred)\n",
+    "mse = mean_squared_error(y_test, pred1)\n",
     "print(f'MSE: {mse}')\n",
     "print(f'R^2 Score: {r2_score}') \n",
     "\n",
     "\n",
     "display('### Linear Regression w/ Scaled Data ###')\n",
+    "# Fit model\n",
     "scaler = preprocessing.StandardScaler().fit(X_train) # standardize data\n",
     "reg = linear_reg(scaler.transform(X_train),y_train)\n",
-    "\n",
-    "pred = reg.predict(scaler.transform(X_test))\n",
+    "# Predict test, compute metrics\n",
+    "pred2 = reg.predict(scaler.transform(X_test))\n",
     "r2_score = reg.score(scaler.transform(X_test), y_test)\n",
-    "mse = mean_squared_error(y_test, pred)\n",
+    "mse = mean_squared_error(y_test, pred2)\n",
     "print(f'MSE: {mse}')\n",
     "print(f'R^2 Score: {r2_score}') \n",
     "\n",
@@ -1011,43 +1044,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'### Gradient Boosted Trees ###'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "GridSearch initializing...\n",
+      "GradientBoostedRegressor model in training...\n",
+      "GradientBoostedRegressor model selected and fitted in 63.796 s\n",
+      "\n",
+      "Best parameters selected by GridSearch: {'max_depth': 1, 'min_samples_split': 2, 'n_estimators': 150}\n",
+      "MSE: 1.836682200507843\n",
+      "R^2 Score: -203.89262163095492\n"
+     ]
+    }
+   ],
+   "source": [
+    "### Gradient Boosted Trees\n",
+    "param_fix =  {'loss': 'ls', 'learning_rate': 0.01}\n",
+    "cv = 10\n",
+    "param_grid = {'n_estimators': (50, 100, 150, 200, 300, 400, 500), \n",
+    "              'max_depth': (1, 2, 3, 4, 5), \n",
+    "              'min_samples_split': (2,3,5)}\n",
+    "\n",
+    "\n",
+    "display('### Gradient Boosted Trees ###')\n",
+    "# Fit model\n",
+    "gbr = run_boosted_tree(X_train, y_train, param_fix, cv, param_grid).fit(X_train, y_train)\n",
+    "# Predict test using best parameters, compute metrics\n",
+    "pred3 = gbr.predict(X_test)\n",
+    "r2_score = reg.score(X_test, y_test)\n",
+    "mse = mean_squared_error(y_test, pred3)\n",
+    "print(f'MSE: {mse}')\n",
+    "print(f'R^2 Score: {r2_score}') "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "## Models\n",
-    "\n",
-    "# Linear Regression\n",
-    "def linear_reg(X_train, y_train, X_test, y_test, get_coef = True):\n",
-    "    # Build model\n",
-    "    reg = LinearRegression().fit(X_train, y_train)\n",
-    "    r2_score = reg.score(X_train, y_train)\n",
-    "    \n",
-    "    # Predict test data and compute MSE\n",
-    "    y_pred = reg.predict(X_test)\n",
-    "    mse = mean_squared_error(y_test, y_pred)\n",
-    "    \n",
-    "    metrics = {'R2 Score: ': [r2_score], 'MSE: ' : mse}\n",
-    "    \n",
-    "    return reg, coef, metrics\n",
-    "\n",
-    "def run_boosted_tree(train_data, train_target, test_data, test_target, param_fix, cv, param_grid):\n",
-    "    print(\"GridSearch initializing...\")\n",
-    "    clf = GridSearchCV(estimator = GradientBoostingRegressor(**param_fix), cv = cv, param_grid = param_grid, \n",
-    "                       scoring = ['r2', 'neg_mean_absolute_error', 'neg_mean_squared_error'], \n",
-    "                       refit = 'neg_mean_squared_error')\n",
-    "    \n",
-    "    print(\"GradientBoostedRegressor model in training...\")\n",
-    "    t0 = time.time()\n",
-    "    clf.fit(train_data, train_target)\n",
-    "    clf_fit = time.time() - t0\n",
-    "    print(\"GradientBoostedRegressor model selected and fitted in %.3f s\\n\" % clf_fit)\n",
-    "    \n",
-    "    best_params = clf.best_params_\n",
-    "    print(\"Best parameters selected by GridSearch: %s\" % best_params)\n",
-    "    \n",
-    "    return clf"
-   ]
+   "source": []
   }
  ],
  "metadata": {
