--- a/base.ipynb
+++ b/base.ipynb
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,16 +82,19 @@
     "import numpy as np\n",
     "import sklearn as sk\n",
     "import time\n",
+    "from time import strptime\n",
+    "from datetime import datetime\n",
+    "import math\n",
+    "import matplotlib.pyplot as plt\n",
+    " \n",
+    "# general sklearn/preprocessing\n",
     "from sklearn import metrics\n",
     "from sklearn.metrics import make_scorer\n",
     "from sklearn import model_selection\n",
     "from sklearn import preprocessing\n",
     "from sklearn.decomposition import PCA\n",
     "from sklearn.model_selection import GridSearchCV\n",
-    "import matplotlib.pyplot as plt\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from datetime import datetime\n",
-    "from time import strptime\n",
     "\n",
     "# SVR\n",
     "from sklearn.svm import SVR\n",
@@ -110,14 +113,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Preprocessing\n",
     "\n",
     "# scale data\n",
-    "def scale_data(train_data, test_data = pd.DataFrame, exclude_train=[], exclude_test=[]):\n",
+    "def scale_data(train_data, test_data = pd.DataFrame):\n",
     "    \"\"\"Standardize features by removing the mean and scaling to unit variance\n",
     "    \n",
     "    Only scales columns with dtype 'float64' and 'int64'.\"\"\"\n",
@@ -125,20 +128,23 @@
     "    scaler = preprocessing.StandardScaler()\n",
     "  \n",
     "    # drop excluded cols, select numeric cols from data and cast them to float64\n",
-    "    train = train_data.drop(exclude_train, axis='columns').select_dtypes(['float64', 'int64']).astype('float64')\n",
-    "    test = test_data.drop(exclude_test, axis='columns').select_dtypes(['float64', 'int64']).astype('float64')\n",
-    "                \n",
+    "    train = train_data.select_dtypes(['float64', 'int64']).astype('float64')\n",
+    "    test = test_data.select_dtypes(['float64', 'int64']).astype('float64')\n",
+    "    \n",
+    "    train_index, train_columns = train.index, train.columns\n",
+    "    test_index, test_columns = test.index, test.columns\n",
+    "        \n",
     "    # Fit on training set only.\n",
     "    scaler.fit(train)\n",
     "\n",
-    "    # Apply transform to both the training set and the test set.    \n",
-    "    train[train.columns] = pd.DataFrame(scaler.transform(train[train.columns]))    \n",
-    "    train_data[train.columns] = train[train.columns]\n",
+    "    # Apply transform to both the training set and the test set.\n",
+    "    train_s = pd.DataFrame(scaler.transform(train[train_columns].values), index=train_index, columns=train_columns)\n",
+    "    train_data.update(train_s)\n",
     "    if (test.empty):\n",
     "        return (train_data)\n",
     "    else:\n",
-    "        test[test.columns] = pd.DataFrame(scaler.transform(test[test.columns]))\n",
-    "        test_data[test.columns] = test[test.columns]\n",
+    "        test_s = pd.DataFrame(scaler.transform(test[test_columns].values), index=test_index, columns=test_columns)\n",
+    "        test_data.update(test_s)\n",
     "        return (train_data, test_data)\n",
     "\n",
     "# replace empty strings with nan\n",
@@ -165,6 +171,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Scoring\n",
+    "def rmse(neg_mean_square_error):\n",
+    "    return math.sqrt(-1.*neg_mean_square_error)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [],
@@ -180,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,14 +211,15 @@
     "    \"\"\"\n",
     "    \n",
     "    print(\"GridSearch initializing...\")\n",
-    "    gs = GridSearchCV(estimator = SVR(), cv=cv, param_grid=param_grid,\n",
+    "    gs = GridSearchCV(estimator = SVR(), cv=cv, param_grid=param_grid, iid=True,\n",
     "                      scoring=['r2', 'neg_mean_absolute_error', 'neg_mean_squared_error'], \n",
     "                      refit='neg_mean_squared_error')\n",
     "    \n",
     "    print(\"SVR model in training...\")\n",
     "    gs.fit(X_train, y_train)\n",
     "\n",
-    "    print(f'''Score: {gs.best_score_}, ''' \\\n",
+    "    print(f'''MSE: {round(-1.*gs.best_score_, 5)}, ''' \\\n",
+    "          f'''RMSE: {round(rmse(gs.best_score_), 5)}, ''' \\\n",
     "          f'''C: {gs.best_estimator_.C}, ''' \\\n",
     "          f'''kernel: {gs.best_estimator_.kernel}, ''' \\\n",
     "          f'''epsilon: {gs.best_estimator_.epsilon}, ''' \\\n",
@@ -366,7 +384,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
