--- a/base.ipynb
+++ b/base.ipynb
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,6 +95,9 @@
     "from sklearn.decomposition import PCA\n",
     "from sklearn.model_selection import GridSearchCV\n",
     "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "# Linear Regression\n",
+    "from sklearn.linear_model import LinearRegression\n",
     "\n",
     "# SVR\n",
     "from sklearn.svm import SVR\n",
@@ -158,7 +161,7 @@
     "# one hot encoding\n",
     "def one_hot(data, drop_first = True):\n",
     "    columns = data.select_dtypes(['object']).columns\n",
-    "    return pd.get_dummies(data, columns = columns, drop_first = True)\n",
+    "    return pd.get_dummies(data, columns = columns, drop_first = drop_first)\n",
     "\n",
     "# PCA\n",
     "def my_pca(train_data, test_data, n_comp):\n",
@@ -182,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
