executed, added comment

--- a/student_performance_kaggle.ipynb
+++ b/student_performance_kaggle.ipynb
@@ -24,7 +24,7 @@
     "- merge train and test data\n",
     "- _Linear, SVR:_ one hot encode (+ drop first columns) categorical data\n",
     "\n",
-    "Best RMSE on Kaggle: __4.51673__ (SVR)"
+    "Best RMSE on Kaggle: __4.24893__ (GBDTREE)"
    ]
   },
   {
@@ -1000,7 +1000,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1008,431 +1008,7 @@
      "output_type": "stream",
      "text": [
       "GridSearch initializing...\n",
-      "GradientBoostedRegressor model in training...\n",
-      "GradientBoostedRegressor model selected and fitted in 87.680 s\n",
-      "\n",
-      "Best parameters selected by GridSearch: {'max_depth': 5, 'min_samples_split': 5, 'n_estimators': 150}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages/sklearn/model_selection/_search.py:841: DeprecationWarning: The default of the `iid` parameter will change from True to False in version 0.22 and will be removed in 0.24. This will change numeric results when test-set sizes are unequal.\n",
-      "  DeprecationWarning)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id</th>\n",
-       "      <th>Grade</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>312</td>\n",
-       "      <td>8.315642</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>164</td>\n",
-       "      <td>9.936007</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>245</td>\n",
-       "      <td>10.963655</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>303</td>\n",
-       "      <td>10.496202</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>260</td>\n",
-       "      <td>11.994454</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>376</td>\n",
-       "      <td>11.385717</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>86</td>\n",
-       "      <td>10.970797</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>375</td>\n",
-       "      <td>9.891644</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>367</td>\n",
-       "      <td>11.617730</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>6</td>\n",
-       "      <td>11.491068</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>84</td>\n",
-       "      <td>12.322551</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>35</td>\n",
-       "      <td>10.452744</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>114</td>\n",
-       "      <td>12.559716</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>69</td>\n",
-       "      <td>10.992651</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>126</td>\n",
-       "      <td>11.832873</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>332</td>\n",
-       "      <td>10.935384</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>127</td>\n",
-       "      <td>11.335140</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>77</td>\n",
-       "      <td>12.336906</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>237</td>\n",
-       "      <td>11.125177</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>305</td>\n",
-       "      <td>7.070966</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>306</td>\n",
-       "      <td>9.616921</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>110</td>\n",
-       "      <td>13.794338</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22</th>\n",
-       "      <td>208</td>\n",
-       "      <td>11.735117</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>21</td>\n",
-       "      <td>13.030194</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>24</th>\n",
-       "      <td>24</td>\n",
-       "      <td>8.804105</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25</th>\n",
-       "      <td>326</td>\n",
-       "      <td>12.192693</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26</th>\n",
-       "      <td>167</td>\n",
-       "      <td>9.359960</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>27</th>\n",
-       "      <td>192</td>\n",
-       "      <td>6.412738</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>28</th>\n",
-       "      <td>337</td>\n",
-       "      <td>9.895192</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>29</th>\n",
-       "      <td>363</td>\n",
-       "      <td>9.468542</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>167</th>\n",
-       "      <td>290</td>\n",
-       "      <td>12.054008</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>168</th>\n",
-       "      <td>41</td>\n",
-       "      <td>9.216504</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>169</th>\n",
-       "      <td>271</td>\n",
-       "      <td>6.469747</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>170</th>\n",
-       "      <td>251</td>\n",
-       "      <td>2.289482</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>171</th>\n",
-       "      <td>61</td>\n",
-       "      <td>11.660109</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>172</th>\n",
-       "      <td>269</td>\n",
-       "      <td>10.750384</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>173</th>\n",
-       "      <td>244</td>\n",
-       "      <td>11.767225</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>174</th>\n",
-       "      <td>36</td>\n",
-       "      <td>10.562103</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>175</th>\n",
-       "      <td>364</td>\n",
-       "      <td>8.892009</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>176</th>\n",
-       "      <td>198</td>\n",
-       "      <td>10.839445</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>177</th>\n",
-       "      <td>235</td>\n",
-       "      <td>11.710646</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>178</th>\n",
-       "      <td>157</td>\n",
-       "      <td>11.370587</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>179</th>\n",
-       "      <td>386</td>\n",
-       "      <td>13.170083</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>180</th>\n",
-       "      <td>247</td>\n",
-       "      <td>11.550954</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>181</th>\n",
-       "      <td>81</td>\n",
-       "      <td>10.642320</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>182</th>\n",
-       "      <td>314</td>\n",
-       "      <td>10.263709</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>183</th>\n",
-       "      <td>31</td>\n",
-       "      <td>11.074860</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>184</th>\n",
-       "      <td>346</td>\n",
-       "      <td>14.336914</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>185</th>\n",
-       "      <td>46</td>\n",
-       "      <td>10.715465</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>186</th>\n",
-       "      <td>76</td>\n",
-       "      <td>11.625484</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>187</th>\n",
-       "      <td>107</td>\n",
-       "      <td>10.198308</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>188</th>\n",
-       "      <td>146</td>\n",
-       "      <td>10.439009</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>189</th>\n",
-       "      <td>248</td>\n",
-       "      <td>12.383426</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>190</th>\n",
-       "      <td>105</td>\n",
-       "      <td>10.887475</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>191</th>\n",
-       "      <td>73</td>\n",
-       "      <td>9.460018</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>192</th>\n",
-       "      <td>279</td>\n",
-       "      <td>9.949249</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>193</th>\n",
-       "      <td>340</td>\n",
-       "      <td>10.608709</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>194</th>\n",
-       "      <td>213</td>\n",
-       "      <td>8.513381</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>195</th>\n",
-       "      <td>316</td>\n",
-       "      <td>6.932111</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>196</th>\n",
-       "      <td>342</td>\n",
-       "      <td>2.357633</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>197 rows × 2 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      id      Grade\n",
-       "0    312   8.315642\n",
-       "1    164   9.936007\n",
-       "2    245  10.963655\n",
-       "3    303  10.496202\n",
-       "4    260  11.994454\n",
-       "5    376  11.385717\n",
-       "6     86  10.970797\n",
-       "7    375   9.891644\n",
-       "8    367  11.617730\n",
-       "9      6  11.491068\n",
-       "10    84  12.322551\n",
-       "11    35  10.452744\n",
-       "12   114  12.559716\n",
-       "13    69  10.992651\n",
-       "14   126  11.832873\n",
-       "15   332  10.935384\n",
-       "16   127  11.335140\n",
-       "17    77  12.336906\n",
-       "18   237  11.125177\n",
-       "19   305   7.070966\n",
-       "20   306   9.616921\n",
-       "21   110  13.794338\n",
-       "22   208  11.735117\n",
-       "23    21  13.030194\n",
-       "24    24   8.804105\n",
-       "25   326  12.192693\n",
-       "26   167   9.359960\n",
-       "27   192   6.412738\n",
-       "28   337   9.895192\n",
-       "29   363   9.468542\n",
-       "..   ...        ...\n",
-       "167  290  12.054008\n",
-       "168   41   9.216504\n",
-       "169  271   6.469747\n",
-       "170  251   2.289482\n",
-       "171   61  11.660109\n",
-       "172  269  10.750384\n",
-       "173  244  11.767225\n",
-       "174   36  10.562103\n",
-       "175  364   8.892009\n",
-       "176  198  10.839445\n",
-       "177  235  11.710646\n",
-       "178  157  11.370587\n",
-       "179  386  13.170083\n",
-       "180  247  11.550954\n",
-       "181   81  10.642320\n",
-       "182  314  10.263709\n",
-       "183   31  11.074860\n",
-       "184  346  14.336914\n",
-       "185   46  10.715465\n",
-       "186   76  11.625484\n",
-       "187  107  10.198308\n",
-       "188  146  10.439009\n",
-       "189  248  12.383426\n",
-       "190  105  10.887475\n",
-       "191   73   9.460018\n",
-       "192  279   9.949249\n",
-       "193  340  10.608709\n",
-       "194  213   8.513381\n",
-       "195  316   6.932111\n",
-       "196  342   2.357633\n",
-       "\n",
-       "[197 rows x 2 columns]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Saved as gbdtree_ne-150_md-5_mss-5_2019-01-01 21:46:40.250043.csv\n"
+      "GradientBoostedRegressor model in training...\n"
      ]
     }
    ],
@@ -1454,7 +1030,6 @@
     "#plot_scores(gbt.cv_results_)\n",
     "#plot_training_deviance(gbt, test_data, test_target)\n",
     "\n",
-    "\n",
     "# predict\n",
     "result = pd.DataFrame(gs.best_estimator_.predict(X_test), columns=['Grade'])\n",
     "\n",
@@ -1470,13 +1045,12 @@
     "           f'''{dt.datetime.now()}.csv'''\n",
     "\n",
     "result.to_csv('./predictions/student_performance_kaggle/' + filename, sep = \",\", index=False)\n",
-    "print(f'''Saved as {filename}''')\n",
-    "\n"
+    "print(f'''Saved as {filename}''')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [
     {
@@ -1488,6 +1062,7 @@
     }
    ],
    "source": [
+    "# Unused\n",
     "# Get a feeling for the dataset\n",
     "\n",
     "# Check if train DataFrame has NaNs\n",
