base: added MSE and RMSE to boosted tree, added boxplots, histograms, correlation matrix functions bike_sharing: added lr, svr, boosted tree, ran with multiple numbers of samples blog_feedback: added description, notes, reordered code, added lr, svr, ran with 100 samples, tweaked pca student_performance: exec added results

--- a/base.ipynb
+++ b/base.ipynb
@@ -86,6 +86,8 @@
     "from datetime import datetime\n",
     "import math\n",
     "import matplotlib.pyplot as plt\n",
+    "from pandas.plotting import scatter_matrix\n",
+    "from matplotlib import cm as cm\n",
     " \n",
     "# general sklearn/preprocessing\n",
     "from sklearn import metrics\n",
@@ -241,9 +243,9 @@
     "\n",
     "def run_boosted_tree(train_data, train_target, test_data, test_target, param_fix, cv, param_grid):\n",
     "    print(\"GridSearch initializing...\")\n",
-    "    clf = GridSearchCV(estimator = GradientBoostingRegressor(**param_fix), cv = cv, param_grid = param_grid, \n",
+    "    clf = GridSearchCV(estimator = GradientBoostingRegressor(**param_fix), cv = cv, param_grid = param_grid,  \n",
     "                       scoring = ['r2', 'neg_mean_absolute_error', 'neg_mean_squared_error'], \n",
-    "                       refit = 'neg_mean_squared_error')\n",
+    "                       refit = 'neg_mean_squared_error', iid=True)\n",
     "    \n",
     "    print(\"GradientBoostedRegressor model in training...\")\n",
     "    t0 = time.time()\n",
@@ -251,8 +253,10 @@
     "    clf_fit = time.time() - t0\n",
     "    print(\"GradientBoostedRegressor model selected and fitted in %.3f s\\n\" % clf_fit)\n",
     "    \n",
-    "    best_params = clf.best_params_\n",
-    "    print(\"Best parameters selected by GridSearch: %s\" % best_params)\n",
+    "    print(f'''MSE: {round(-1.*clf.best_score_, 5)}, ''' \\\n",
+    "          f'''RMSE: {round(rmse(clf.best_score_), 5)}''')\n",
+    "    \n",
+    "    print(f'Best parameters selected by GridSearch: {clf.best_params_}')\n",
     "    \n",
     "    return clf\n",
     "\n",
@@ -361,6 +365,51 @@
     "    \n",
     "    print(\"Scoring: \" + estim.score(test_data, test_target))\n",
     "    print(\"Best selected model: \" + estim.best_model())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Plots\n",
+    "\n",
+    "def boxplots(data):\n",
+    "    for col in data.select_dtypes(['int64', 'float64']).columns:\n",
+    "        fig, ax = plt.subplots()\n",
+    "        bp = ax.boxplot(data[[col]].values)\n",
+    "        ax.set_xlabel(col)\n",
+    "        \n",
+    "def histograms(data):\n",
+    "    for col in data.select_dtypes(['object']).columns:\n",
+    "        fig, ax = plt.subplots()\n",
+    "        hg = ax.hist(data[[col]].values)\n",
+    "        ax.set_xlabel(col)\n",
+    "        \n",
+    "def correlation_matrix(df, labels):\n",
+    "    # sort by col names \n",
+    "    r_df = df.reindex(labels, axis='columns')\n",
+    "    \n",
+    "    # create figure\n",
+    "    fig = plt.figure(0, figsize=(20,20))\n",
+    "    ax1 = fig.add_subplot(111)\n",
+    "    # get colormap\n",
+    "    cmap = cm.get_cmap('jet', 30)\n",
+    "    # show correlation matrix on 2D raster\n",
+    "    cax = ax1.imshow(r_df.corr(), interpolation=\"nearest\", cmap=cmap)\n",
+    "    #ax1.grid(True)\n",
+    "    \n",
+    "    # add labels and ticks\n",
+    "    plt.title('Correlation')\n",
+    "    #ax1.set_xticks(range(r_df.shape[1]))\n",
+    "    #ax1.set_xticklabels(labels, fontsize=10, rotation='vertical')\n",
+    "    #ax1.set_yticks(range(r_df.shape[1]))\n",
+    "    #ax1.set_yticklabels(labels, fontsize=10)\n",
+    "    \n",
+    "    # Add colorbar, make sure to specify tick locations to match desired ticklabels\n",
+    "    fig.colorbar(cax, ticks=[-1, -.75, -.5, -.25, 0, .25, .5, .75, 1])\n",
+    "    plt.show()"
    ]
   },
   {
